argocd/manifests/argocd-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "argocd.###ZARF_DOMAIN_NAME###"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
      - "argocd.###ZARF_DOMAIN_NAME###"
    tls:
      mode: SIMPLE
      credentialName: ingress-cert
